Fix layout issue on iphone

--- a/assets/styles/bricks.css
+++ b/assets/styles/bricks.css
@@ -39,8 +39,12 @@
 .W-30 {width:30%}
 .W-20 {width:20%}
 .W-10 {width:10%}
+.Mw-100 {max-width:100%}
+.W-a {width:auto}
 
 .H-100 {height: 100%}
+.Mh-100 {max-height:100%}
+.H-a {height:auto}
 
 /* Margin */
 .M-0a {margin: 0 auto}
